--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
             <img src="assets/record.png" onClick="audioControls()">
         </div>
     </div>
+
+    <div class="mobile">Please view this on your computer!</div>
     <script src="script.js"></script>
 </body>
 
